# linkedin_analytics

./: Dockerfile  README.md  pyproject.toml
linkedin_simulator/: __init__.py  crawler.py  data_generator.py  database.py  kafka_simulator.py  main.py
notebooks/: analysis.ipynb
