[tool.poetry]
name = "linkedin-simulator"
version = "0.1.0"
description = "LinkedIn Post Simulator and Analyzer"
authors = ["Japneet"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"
python-dateutil = "^2.8.2"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"